# chatbot

./: .gitignore  README.md  agent.md  package.json  pyproject.toml  setup.cfg  tsconfig.json
app/auth/: Dockerfile  package.json
app/auth/src/: index.ts
app/dashboard/: next.config.js  package.json  tsconfig.json
app/gateway/: Dockerfile  package.json
app/gateway/src/: index.ts
app/infra/docker/: docker-compose.yml  gateway.Dockerfile  orchestrator.Dockerfile  weaviate.Dockerfile
app/infra/helm/: Chart.yaml  values.yaml
app/infra/terraform/: main.tf  outputs.tf  variables.tf
app/ingestion/: Dockerfile  package.json  tsconfig.json
app/ingestion/src/: index.ts
app/orchestrator/: Dockerfile  package.json
app/orchestrator/src/: index.ts
app/shared/: index.ts  package.json  tsconfig.json
app/shared/libs/: config.ts  constants.ts  db.ts  logger.ts  mq.ts  redis.ts  telemetry.ts
app/shared/types/: analytics.ts  chat.ts  index.d.ts  tenant.ts
app/shared/utils/: rateLimiter.ts  sanitizeInput.ts  validation.ts
app/tenants/: Dockerfile  package.json
app/tenants/src/: index.ts
app/tests/e2e/: analytics_dashboard.test.ts  handoff_flow.test.ts  onboarding_flow.test.ts
app/tests/integration/: api_endpoints.test.ts  chat_flow.test.ts  multi_tenant.test.ts
app/tests/unit/: auth.test.ts  tenants.test.ts  (+2 more)
app/tools/: Dockerfile
app/widget/: Dockerfile  package.json  tsconfig.json
backend/: __init__.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test_conversation.py  test_ingestion.py
(+101 files in other folders)
