[metadata]
name = enterprise-chatbot
version = 0.1.0

[options]
packages = find:
install_requires =
    fastapi>=0.110.0
    uvicorn[standard]>=0.29.0
    sqlalchemy>=2.0.0
    pydantic>=1.10,<2.0
    python-dotenv>=1.0.0
    python-multipart>=0.0.9
    requests>=2.31.0
    beautifulsoup4>=4.12.0
    pdfminer.six>=20221105
    scikit-learn>=1.4.0
    joblib>=1.3.0
    numpy>=1.24.0
python_requires = >=3.10

[options.extras_require]
dev =
    pytest>=7.4.0

[options.packages.find]
where = .

[tool:pytest]
pythonpath = .
addopts = -q
